--- a/views/carlist.ejs
+++ b/views/carlist.ejs
@@ -61,6 +61,7 @@
         </div>
     </div>
 </nav>
+<!-- List of casrs -->
 <div class="table-car">
     <table class="tname" style="width: 60%;">
         <thread>
